--- a/Frontend/src/pages/css/JopPrep.css
+++ b/Frontend/src/pages/css/JopPrep.css
@@ -57,7 +57,7 @@ body {
 /* Info Textarea Styling */
 .info-textarea {
     width: 100%;
-    height: 100px;
+    height: 200px;
     padding: 10px;
     border-radius: 4px;
     border: 1px solid #ccc;
@@ -148,20 +148,18 @@ body {
 .submit-button {
     background-color: #007BFF; /* Blue background */
     color: white; /* White text */
-    border: none;
-    border-radius: 5px;
-    padding: 10px 20px;
-    font-size: 16px;
-    cursor: pointer;
-    margin-top: 10px; /* Space above the button */
-    display: block; /* Ensure it’s on its own line */
 }
 
-.submit-button:hover {
-    background-color: #0056b3; /* Darker blue on hover */
+.sub-button{
+    background-color: #2c7a7b; /* Teal background */
+    color: white;
 }
 
-.submit-button:focus {
+.sub-button:hover {
+    background-color: #285e61; /* Darker blue on hover */
+}
+
+.sub-button:focus {
     outline: none;
 }
 
